Refactoring of deprecated Java functions